@@ -263,9 +263,7 @@ contains
     !*FD write variables to a netCDF file
     use glimmer_ncdf
     use glide_types
-    use glimmer_global, only : dp
-    use physcon, only : scyr
-    use paramets, only : thk0, acc0
+    use paramets, only : thk0
     use glimmer_scales
     implicit none
     type(glimmer_nc_output), pointer :: outfile
